<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.usaha.umkm.ui.home.HomeFragment"
        android:label="Beranda"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_location_favorite"
        android:name="com.usaha.umkm.ui.location_popular.LocationPopularFragment"
        android:label="@string/lokasi_populer"
        tools:layout="@layout/fragment_location_popular" />

    <fragment
        android:id="@+id/nav_location_new"
        android:name="com.usaha.umkm.ui.location_new.LocationNewFragment"
        android:label="@string/lokasi_terbaru"
        tools:layout="@layout/fragment_location_new" />

    <fragment
        android:id="@+id/nav_options"
        android:name="com.usaha.umkm.ui.options.OptionsFragment"
        android:label="@string/pengaturan"
        tools:layout="@layout/fragment_options" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.usaha.umkm.ui.profile.ProfileFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profile" />

</navigation>